@@ -16,7 +16,7 @@
             "rct2.scenery_small.tmp",
             "fidwell.scenery_small.tmp",
             "rct2.scenery_small.titc",
-            "$DAT:00000002|GWTRITC ",
+            "fidwell.scenery_small.titc",
             "rct2.scenery_small.tghc",
             "$DAT:00000002|GWTRGHC ",
             "rct2.scenery_small.tac",
