@@ -1,0 +1,45 @@
+{
+    "id": "fidwell.scenery_small.titc",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 25,
+        "removalPrice": 15,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 120,
+        "isTree": true,
+        "shape": "4/4",
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -18, "y": -121 },
+      { "path": "images/1.png", "x": -16, "y": -121 },
+      { "path": "images/2.png", "x": -18, "y": -121 },
+      { "path": "images/3.png", "x": -16, "y": -121 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Italian Cypress Tree",
+            "fr-FR": "Cyprès d’Italie",
+            "de-DE": "Italienische Zypresse",
+            "es-ES": "Ciprés italiano",
+            "it-IT": "Cipresso italiano",
+            "nl-NL": "Italiaanse cipres",
+            "sv-SE": "Italiensk cypress",
+            "ko-KR": "서양노송나무",
+            "zh-CN": "意大利扁柏树",
+            "zh-TW": "義大利扁柏樹",
+            "pt-BR": "Árvore Cipreste-Italiano",
+            "cs-CZ": "Italský cypřiš",
+            "ja-JP": "イタリア糸杉",
+            "pl-PL": "Włoski cyprys",
+            "ru-RU": "Итальянский кипарис",
+            "eo-ZZ": "Mediteranea Cipresoarbo",
+            "ca-ES": "Xiprer italià",
+            "fi-FI": "Välimerensypressi"
+        }
+    }
+}
